Terminando los faltantes: 2020110

--- a/dia04/app/templates/admin/admin_base.html
+++ b/dia04/app/templates/admin/admin_base.html
@@ -1,14 +1,17 @@
 {% extends 'bootstrap/base.html' %}
 {% block head %}
     {{ super() }}
+    <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">-->
     <title>
         PANEL DE ADMINISTRACIÓN
     </title>
 {% endblock %}
 {% block body %}
-    {% if session['token'] %}
-        <a href="{{ url_for('admin.logout') }}">Logout</a>
-    {% endif %}
+    {% block navbar %}
+        {% if session['token'] %}
+            {% include 'admin/navbar.html' %}
+        {% endif %}
+    {% endblock %}
     {% for message in get_flashed_messages() %}
         <div class="alert alert-success alert-dismissible">
             <button type="button"
