--- a/dia04/app/templates/admin/proyectos.html
+++ b/dia04/app/templates/admin/proyectos.html
@@ -1,6 +1,26 @@
 {% extends 'admin/admin_base.html' %}
+{% import 'bootstrap/wtf.html' as wtf %}
 {% block content %}
     <div class="container">
         <h3>PROYECTOS</h3>
+        <table class="table table-striped table-dark">
+            <thead>
+              <tr>
+                <th scope="col">NOMBRE</th>
+                <th scope="col">DESCRIPCION</th>
+                <th scope="col">URL</th>
+              </tr>
+            </thead>
+            <tbody>
+            {% for p in proyectos %}
+              <tr>
+                <td>{{ p['nombre'] }}</td>
+                <td>{{ p['descripcion'] }}</td>
+                <td>{{ p['url'] }}</td>
+              </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        {{ wtf.quick_form(proyecto_form) }}
     </div>
 {% endblock %}
