--- a/shop/tienda/templates/layout.html
+++ b/shop/tienda/templates/layout.html
@@ -59,7 +59,7 @@
                            Dirección
                         </p>
                         <p class="links_list-value">
-                            <a href="http://maps.google.com" target="_blank" rel="nofollow">Calle normal 123, Perú</a>
+                            <a href="http://maps.google.com" target="_blank" rel="nofollow">Villa Médica, JLBR, Arequipa - Perú</a>
                         </p>
                     </li>
                     <li>
@@ -67,7 +67,7 @@
                             Contactos
                         </p>
                         <p class="links_list-value">
-                            <a href="mailto:support@email.com">fashionstore@gmail.com</a>
+                            <a href="mailto:support@email.com">fashionstore_vm@gmail.com</a>
                         </p>
                     </li>
                     <li>
@@ -87,7 +87,7 @@
     <div class="site-header">
 
         <p class="h-logo">
-            <a href="index.html"><img src="{% static 'img/logo.png' %}" alt="MultiShop"></a>
+            <a href="{% url 'tienda:index' %}"><img src="{% static 'img/logo.png' %}" alt="MultiShop"></a>
         </p><!--
     No Space
     --><div class="h-shop">
