--- a/dia02/templates/home.html
+++ b/dia02/templates/home.html
@@ -1,5 +1,13 @@
-{%extends 'layout.html' %}
-{%block content %}
+{% extends 'layout.html' %}
+
+<!--
+    Acá estamos definiendo un bloque llamado 'content'
+    De esa forma, el contenido html que haya en él será
+    puesto en la plantilla anteriormente indicada con la
+    directiva 'extends'. Obviamente, este bloque debe 
+    llamarse igual que el que se creó en la plantilla
+-->
+{% block content %}
 </br>
 
 <!-- Masthead-->
@@ -18,7 +26,7 @@
         </div>
         <!-- Masthead Subheading-->
         <p class="masthead-subheading font-weight-light mb-0">{{ bio }}</p>
+        <p class="masthead-subheading font-weight-light mb-0">{{ company }}</p>
     </div>
 </header>
-
 {% endblock %}
