--- a/dia03/templates/home.html
+++ b/dia03/templates/home.html
@@ -1,5 +1,5 @@
-{%extends 'layout.html' %}
-{%block content %}
+{% extends 'layout.html' %}
+{% block content %}
 </br>
 
 <!-- Masthead-->
@@ -7,9 +7,9 @@
     <div class="container d-flex align-items-center flex-column">
         <!-- Masthead Avatar Image-->
         <!--<img class="masthead-avatar mb-5" src="{{ url_for('static',filename='assets/img/avataaars.svg') }}" alt="..." />-->
-        <img class="masthead-avatar mb-5" src="https://avatars.githubusercontent.com/u/91646941?v=4" alt="..." />
+        <img class="masthead-avatar mb-5" src= "{{ foto }}" alt="..." />
         <!-- Masthead Heading-->
-        <h1 class="masthead-heading text-uppercase mb-0">{{ nombre }}</h1>
+        <h1 class="masthead-heading text-uppercase mb-0">{{ nombre }} <br> {{ apellido }}</h1>
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"></div>
