--- a/dia03/templates/layout.html
+++ b/dia03/templates/layout.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Portafolio Personal</title>
+        <title>Portafolio personal</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="{{ url_for('home') }}">{{nombre}}</a>
+                <a class="navbar-brand" href="{{ url_for('home') }}">{{ nombre }} {{ apellido }}</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -28,14 +28,16 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ url_for('portafolio') }}">Portafolio</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ url_for('about') }}">Acerca de Mi</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ url_for('about') }}">Acerca de Mí</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ url_for('contact') }}">Contacto</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        {%block content %}
+        
+        {% block content %}
         {% endblock %}
+        
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container">
@@ -44,9 +46,9 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Ubicación</h4>
                         <p class="lead mb-0">
-                            Urb Guardia civil i14
+                            {{ direccion }}
                             <br />
-                            Arequipa, Perú
+                            {{ distrito }}, {{ ciudad }}, {{ pais}}
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
